Introduce getSubtitle and rename getName to getTitle